# LEGO_DB

./: .gitignore  README.md  config.json  legoDB.py  legoDB.pyw  makeLegoDB.py  owned_data_exporter.py  pyproject.toml
csv/: README.md
language/: arz.json  bn.json  cmn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  mr.json  pt.json  ru.json  ta.json  te.json  tr.json  ur.json  vi.json  wuu.json  yue.json
scripts/: makeLegoDB.py  owned_data_exporter.py  owned_data_importer.py
src/lego_db/: app.py  commands.py  core.py  i18n.py  repository.py
src/lego_db/data/language/: arz.json  bn.json  cmn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  mr.json  pt.json  ru.json  ta.json  te.json  tr.json  ur.json  vi.json  wuu.json  yue.json
tests/: test_commands.py  test_core.py
