[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lego_db"
version = "1.2.2"
requires-python = ">=3.8"

[project.scripts]
lego-db = "lego_db.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
lego_db = [
    "data/**/*.csv",
    "data/**/*.json"
]

[tool.setuptools.packages.find]
where = ["src"]